--- a/scripts/02_analysis.Rmd
+++ b/scripts/02_analysis.Rmd
@@ -40,6 +40,7 @@ library(lmerTest)
 library(sjPlot)
 library(here)
 library(emmeans)
+library(papaja)
 
 
 knitr::opts_chunk$set(message = FALSE, warning = FALSE)
@@ -346,6 +347,7 @@ Phase31_TC <- Phase31_TC %>%
 Phase31_TC$Condition <- as.factor(Phase31_TC$Condition)
 Phase31_TC$Validity <- as.factor(Phase31_TC$Validity)
 
+#write_csv(file = here("data","Phase31TC_raw.csv"),Phase31_TC)
 #similar processes done in MC analysis
 Phase31_TCagg <- Phase31_TC %>% 
   group_by(PROLIFIC_PID,Condition,Validity, .drop = FALSE) %>% 
@@ -637,8 +639,8 @@ transferRT_3.1 <- Phase32_TC %>%
 
 Phase32_TCagg <- merge(Phase32_TCagg,transferRT_3.1, by = c("PROLIFIC_PID","Validity","Condition"))
 
-write_csv(file = here("Data","Phase32_TCagg.csv"),Phase32_TCagg)
-write_csv(file = here("Data","Phase32_TC_PC.csv"),Phase32_transferPC)
+#write_csv(file = here("Data","Phase32_TCagg.csv"),Phase32_TCagg)
+#write_csv(file = here("Data","Phase32_TC_PC.csv"),Phase32_transferPC)
 
 Phase32_TCS1_Validpc <- Phase32_transferPC %>% 
   filter(Validity=="Valid")
@@ -649,8 +651,11 @@ pander(t.test(Phase32_TCS1_Validpc$PC, mu = 0.5, alternative = "greater"), style
 ```
 
 
+
+```{r include=FALSE}
+
 ## Additional Free Choice Analysis - Test for indirect retrieval 
-```{r}
+
 Phase3_IR <- dataFree %>% 
   filter(Phase==3.1)
 Phase3_IR$RChoice <- NA
@@ -706,11 +711,12 @@ table(Phase3_IR$RChoice,Phase3_IR$PreviousResp)
 
 ```
 
+
+```{r include=FALSE}
 ### 1. Model 1
 
-Validity x RRel
+#Validity x RRel
 
-```{r}
 model1 <- glmer(RChoice_s1~1+Validity + (1+Validity|PROLIFIC_PID), 
                       data=Phase3_IR, 
                       na.action = "na.omit", binomial)
@@ -719,9 +725,11 @@ tab_model(model1, show.se = TRUE,show.stat = TRUE, show.ci = FALSE,show.aic = TR
                   dv.labels = "Error Rate")
 plot_model(model1,terms = "Validity",type = "pred")
 ```
+
+
+```{r include=FALSE}
 ### 2. Model 2 - with last occurence
 
-```{r}
 means.Distance<- aggregate(data = Phase3_IR, LastOcc ~ PROLIFIC_PID, mean)
 names(means.Distance)[2]<-"Distance_mean"
   
@@ -743,13 +751,10 @@ tab_model(model2, show.se = TRUE,show.stat = TRUE, show.ci = FALSE,show.aic = TR
 plot_model(model2,type = "pred",terms = c("Validity","previous_rm_cwp[minmax]","Distance_cwp[minmax]"))
 ```
 
-```{r}
-#anova(model1,model2)
-```
+
+```{r include=FALSE}
 
 ### Model 3
-
-```{r}
 model3 <- glmer(RChoice_s1~1+Validity*Distance_cwp*previous_rm_cwp + (1+Validity*Distance_cwp*previous_rm_cwp|PROLIFIC_PID),
                       data=Phase3_IR, 
                       na.action = "na.omit", binomial)
@@ -797,7 +802,156 @@ Phase31TC_Awareness <- Phase31_transferPC %>%
          S1CRAwareness = ifelse(PROLIFIC_PID %in% S1C_Q_aware, "Aware","Unaware"),
          S2Awareness = ifelse(PROLIFIC_PID %in% S2_Q_aware, "Aware","Unaware"))
 Phase31TC_Awareness$S1TRAwareness <- factor(Phase31TC_Awareness$S1TRAwareness, levels = c("Transferred", "Not transferred"))
+
+#write_csv(file = here("Data","Phase31TC_Awareness.csv"),Phase31TC_Awareness)
+
 ```
+
+### Multi level modelling with awareness data
+
+```{r}
+Phase31_TC <- read_csv(here("data","Phase31TC_raw.csv"))
+
+Phase31TCraw_Awareness <- Phase31_TC %>% 
+  mutate(SSCRAwareness = ifelse(PROLIFIC_PID %in% SS_CR_aware, "Aware","Unaware"),
+         S1TRAwareness = ifelse(PROLIFIC_PID %in% S1_Q_aware, "Transferred","Not transferred"),
+         S1CRAwareness = ifelse(PROLIFIC_PID %in% S1C_Q_aware, "Aware","Unaware"),
+         S2Awareness = ifelse(PROLIFIC_PID %in% S2_Q_aware, "Aware","Unaware"))
+Phase31TCraw_Awareness$S1TRAwareness <- factor(Phase31TCraw_Awareness$S1TRAwareness, levels = c("Transferred", "Not transferred"))
+
+Phase31TCraw_Awareness <- Phase31TCraw_Awareness %>% 
+  select(PROLIFIC_PID,ChoiceType,Phase,Condition,Stim1,Stim2,Validity,FreeChoiceResp,Response.keys,FreeChoiceAccuracy,RT_io,SSCRAwareness,S1TRAwareness,S1CRAwareness,S2Awareness)
+
+#table(Phase31TCraw_Awareness$FreeChoiceAccuracy,Phase31TCraw_Awareness$Validity)
+##compute new variables - contrast coding
+Phase31TCraw_Awareness <- Phase31TCraw_Awareness %>% 
+  mutate(SSCRAwareness = ifelse(SSCRAwareness == "Aware",1,-1),
+         S2Awareness = ifelse(S2Awareness=="Aware",1,-1),
+         S1CRAwareness = ifelse(S1CRAwareness=="Aware",1,-1),
+         S1TRAwareness = ifelse(S1TRAwareness=="Transferred",1,-1))
+
+#write_csv(file = here("data","DataforAwarenessMLM.csv"),Phase31TCraw_Awareness)
+
+```
+
+
+#### 1. Intercept Model with Free choice accuracy as dv
+
+```{r}
+m0 <- glmer(FreeChoiceAccuracy ~ 1|PROLIFIC_PID,
+            data = Phase31TCraw_Awareness,
+            family = binomial,
+            glmerControl(optCtrl = list(maxfun = 2e5)))
+
+```
+
+#### 2. Model with the factors of SSAwareness and S2Awareness
+
+```{r fig.show='hold',out.width="50%"}
+# m1 <- glmer(data = Phase31TCraw_Awareness,
+#             FreeChoiceAccuracy ~ 1+SSCRAwareness + S2Awareness + (1|PROLIFIC_PID),
+#             family = binomial,
+#             glmerControl(optCtrl = list(maxfun = 2e5)))
+# 
+# saveRDS(m1,file = here("data","Awareness_onlymaineffects.rds"))
+
+
+m1<- readRDS(file = here("data","Awareness_onlymaineffects.rds"), refhook = NULL)
+tab_model(m1, show.est = T,show.se = T,show.stat = T,
+          show.df = T, show.ci = F)
+
+afex_plot(m1, x = c("SSCRAwareness"),
+          error = "model",
+          data_plot = T,
+          error_ci = T,
+          #factor_levels = list(SSCRAwarness = c("Unaware","Aware")),
+          data_geom = geom_violin,
+          data_arg = list(width = 0.3),
+          mapping = c("color","fill"))+
+  geom_line(aes(group = 1), color = "black", linetype = "dashed")+
+  geom_hline(yintercept = 0.25, linetype = "dashed")+
+  theme_apa()+
+  scale_y_continuous(limits = c(0,1))+
+  scale_fill_manual(values = c("#2D3047","#84B082"))+
+  scale_color_manual(values = c("#2D3047","#84B082"))+
+  labs(x = "S-S association awareness",
+       y = "Likelihood of choosing \n valid response")+
+  theme(text = element_text(size = 18, family = "Times"), legend.position = "none")
+
+afex_plot(m1, x = c("S2Awareness"),
+          error = "model",
+          data_plot = T,
+          error_ci = T,
+          #factor_levels = list(S2Awareness = c("Unaware","Aware")),
+          data_geom = geom_violin,
+          data_arg = list(width = 0.3),
+          mapping = c("color","fill"))+
+  geom_line(aes(group = 1), color = "black")+
+  geom_hline(yintercept = 0.25, linetype = "dashed")+
+  theme_apa()+
+  scale_y_continuous(limits = c(0,1))+
+  scale_fill_manual(values = c("#2D3047","#84B082"))+
+  scale_color_manual(values = c("#2D3047","#84B082"))+
+  labs(x = "S2-R Contingency awareness",
+       y = "Likelihood of choosing \n valid response")+
+  theme(text = element_text(size = 18, family = "Times"), legend.position = "none")
+
+```
+
+#### 3. Model 2 with the interaction
+
+```{r fig.show='hold', out.width="50%"}
+# m2 <- glmer(data = Phase31TCraw_Awareness,
+#             FreeChoiceAccuracy ~ 1+(SSCRAwareness * S2Awareness) + (1+(SSCRAwareness * S2Awareness)|PROLIFIC_PID),
+#             family = binomial,
+#             glmerControl(optCtrl = list(maxfun = 2e5)))
+# 
+# saveRDS(m2,file = here("data","Awareness_withinteractioneffects.rds"))
+
+m2 <- readRDS(file = here("data","Awareness_withinteractioneffects.rds"), refhook = NULL)
+
+tab_model(m2, show.est = T,show.se = T,show.stat = T,
+          show.df = T, show.ci = F)
+
+afex_plot(m2, x = c("SSCRAwareness"),
+          error = "model",
+          data_plot = T,
+          error_ci = T,
+          #factor_levels = list(SSCRAwarness = c("Unaware","Aware")),
+          data_geom = geom_violin,
+          data_arg = list(width = 0.3),
+          mapping = c("color","fill"))+
+  geom_line(aes(group = 1), color = "black")+
+  geom_hline(yintercept = 0.5, linetype = "dashed")+
+  theme_apa()+
+  scale_y_continuous(limits = c(0,1))+
+  scale_fill_manual(values = c("#2D3047","#84B082"))+
+  scale_color_manual(values = c("#2D3047","#84B082"))+
+  labs(x = "S-S association awareness",
+       y = "Likelihood of choosing \n valid response")+
+  theme(text = element_text(size = 18, family = "Times"), legend.position = "none")
+
+afex_plot(m2, x = c("S2Awareness"),
+          error = "model",
+          data_plot = T,
+          error_ci = T,
+          #factor_levels = list(S2Awareness = c("Unaware","Aware")),
+          data_geom = geom_violin,
+          data_arg = list(width = 0.3),
+          mapping = c("color","fill"))+
+  geom_line(aes(group = 1), color = "black")+
+  geom_hline(yintercept = 0.5, linetype = "dashed")+
+  theme_apa()+
+  scale_y_continuous(limits = c(0,1))+
+  scale_fill_manual(values = c("#2D3047","#84B082"))+
+  scale_color_manual(values = c("#2D3047","#84B082"))+
+  labs(x = "S2-R Contingency awareness",
+       y = "Likelihood of choosing \n valid response")+
+  theme(text = element_text(size = 18, family = "Times"), legend.position = "none")
+
+
+```
+
 
 
 ### Plots showing the trends of the transfer per awareness
